--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -1,13 +1,32 @@
 <ion-content class="light-theme">
+  <!-- Header -->
+  <div class="header">
+    <div class="features">
+      <div class="container">
+        <div class="title">Features</div>
+        <div class="subt">
+          A powerful set of features
+        </div>
+      </div>
+      <div class="container bottom">
+        <div class="shortcut">
+          <span style="font-weight: 500">Windows: </span>Ctrl + Alt + V
+        </div>
+        <div class="shortcut">
+          <span style="font-weight: 500">macOS: </span>⌘ + Shift + V
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Content -->
   <div class="container content justify-content align-items column center">
     <div class="container item">
       <div><img src="assets/images/app-landscape.png" /></div>
       <div>
         <h2>
-          Search from your history
+          Navigate through your history
         </h2>
-        <p>Browse, search, bookmark, and more...</p>
+        <p>Use the 「↑」「↓」 arrows or your mouse to navigate through the clipboard history</p>
       </div>
     </div>
     <div class="container item">
