--- a/src/app/site/pages/contact/contact.page.scss
+++ b/src/app/site/pages/contact/contact.page.scss
@@ -2,6 +2,8 @@
   width: 100%;
   height: 580px;
   background-image: url('../../../../assets/images/contact.png');
+  // filter: drop-shadow(0 0 0.75rem grey);
+  box-shadow: inset 0 0 360px rgba(0, 0, 0, 0.9);
   background-size: cover; /* <------ */
   background-repeat: no-repeat;
   background-position: center center;
@@ -13,11 +15,11 @@
       font-weight: 700;
       font-size: 2.2rem;
       text-transform: uppercase;
-      color: var(--text-color--light);
+      color: rgba(255, 255, 255, 0.9);
     }
     .subt {
-      font-size: 1.3rem;
-      color: var(--text-color--light);
+      font-size: 1.0rem;
+      color: rgba(255, 255, 255, 0.9);
     }
   }
 }
