--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -1,3 +1,47 @@
+.header {
+  position: relative;
+  width: 100%;
+  height: 580px;
+  background-image: url('../../../../assets/images/keyboard.jpg');
+  // filter: drop-shadow(0 0 0.75rem grey);
+  box-shadow: inset 0 0 360px rgba(0, 0, 0, 0.9);
+  background-size: cover; /* <------ */
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  z-index: 10;
+  .features {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 3rem;
+    height: 100%;
+    .container {
+      display: flex;
+      flex-direction: column;
+      .title {
+        font-weight: 700;
+        font-size: 2.2rem;
+        text-transform: uppercase;
+        color: rgba(255, 255, 255, 0.9);
+      }
+      .subt {
+        font-size: 1rem;
+        color: rgba(255, 255, 255, 0.9);
+      }
+      &.bottom {
+        justify-content: flex-end;
+        align-items: flex-end;
+        .shortcut {
+          font-weight: 300;
+          font-size: 0.9rem;
+          color: rgba(255, 255, 255, 0.5);
+        }
+      }
+    }
+  }
+}
+
 .container {
   position: relative;
   display: flex;
@@ -20,41 +64,6 @@
   }
   &.flex-start {
     align-items: flex-start;
-  }
-}
-
-//  Header
-.header {
-  padding: 3vw 6vw;
-  min-height: 540px;
-  h1 {
-    text-transform: uppercase;
-    font-size: 2rem;
-    font-weight: 700;
-    color: var(--ion-color-tertiary);
-    text-align: center;
-  }
-  h2 {
-    font-size: 1rem;
-    color: var(--text-color--extra-light);
-    font-weight: 600;
-  }
-  h4 {
-    line-height: 1.2;
-    font-size: 1.2rem;
-    font-weight: 300;
-    padding: 30px;
-    color: var(--text-color--extra-light);
-  }
-  p {
-    font-weight: 300;
-    color: var(--text-color--extra-light);
-    font-size: 0.7rem;
-  }
-  button {
-    margin: 1vw;
-    min-width: 240px;
-    min-height: 60px;
   }
 }
 
