--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -13,7 +13,7 @@
           <span style="font-weight: 500">Windows: </span>Ctrl + Alt + V
         </div>
         <div class="shortcut">
-          <span style="font-weight: 500">macOS: </span>⌘ + Shift + V
+          <span style="font-weight: 500">macOS: </span>Shift + ⌘ + V
         </div>
       </div>
     </div>
