--- a/src/app/site/pages/navigation/navigation.page.scss
+++ b/src/app/site/pages/navigation/navigation.page.scss
@@ -12,7 +12,7 @@
     color: #565b70;
   }
   img {
-    filter: brightness(1.5) hue-rotate(0deg) saturate(0.5);
+    // filter: brightness(1.5) hue-rotate(0deg) saturate(0.5);
     width: 48px;
   }
 
