--- a/src/app/pages/clipboard/clipboard.page.scss
+++ b/src/app/pages/clipboard/clipboard.page.scss
@@ -30,6 +30,7 @@
     text-align: center;
     vertical-align: middle;
     margin-right: 5px;
+    filter: brightness(0.65) hue-rotate(0deg) saturate(0.35);
   }
   span {
     font-size: 0.9rem;
