--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -21,7 +21,7 @@
   <!-- Content -->
   <div class="container content justify-content align-items column center">
     <div class="container item">
-      <div><img src="assets/images/app-landscape.png" /></div>
+      <div><img src="assets/images/app-select.png" /></div>
       <div>
         <h2>
           Navigate through your history
@@ -31,13 +31,12 @@
     </div>
     <div class="container item">
       <div>
-        <h2>Landscape Mode</h2>
+        <h2>Search</h2>
         <p>
-          Go deeper into everything you look with landscape mode. Place the app
-          in your favorite position of the desktop.
+          Just write your input... You'll get the result from the entire clipboard history
         </p>
       </div>
-      <div><img src="assets/images/app-images.png" /></div>
+      <div><img src="assets/images/app-search.png" /></div>
     </div>
   </div>
 
