--- a/src/app/site/pages/home/home.page.scss
+++ b/src/app/site/pages/home/home.page.scss
@@ -31,7 +31,7 @@
     text-transform: uppercase;
     font-size: 2rem;
     font-weight: 700;
-    color: #137BE6;
+    color: var(--text-color--dark);
     text-align: center;
   }
   h2 {
