--- a/src/app/pages/preferences/preferences.page.scss
+++ b/src/app/pages/preferences/preferences.page.scss
@@ -36,6 +36,7 @@
     text-align: center;
     vertical-align: middle;
     margin-right: 5px;
+    filter: brightness(0.65) hue-rotate(0deg) saturate(0.35);
   }
   // General
   .spacer {
