--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -26,14 +26,17 @@
         <h2>
           Navigate through your history
         </h2>
-        <p>Use the 「↑」「↓」 arrows or your mouse to navigate through the clipboard history</p>
+        <p>
+          Use the 「↑」「↓」 arrows or your mouse to navigate through the
+          clipboard history
+        </p>
       </div>
     </div>
     <div class="container item">
       <div>
-        <h2>Search</h2>
+        <h2>Search...</h2>
         <p>
-          Just write your input... You'll get the result from the entire clipboard history
+          Search from the entire clipboard history
         </p>
       </div>
       <div><img src="assets/images/app-search.png" /></div>
